--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,11 +6,13 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 body {
     /*font-size: 22px;*/
-    font-family: nb_internationalproregular,Georgia,Times New Roman,Times,serif;
+    /*font-family: Helvetica, Arial, sans-serif;*/
+    font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
     background-color: var(--greyish-white);
     color: var(--dark-grey);
 }
@@ -52,4 +54,23 @@ header nav ul li {
 header nav ul li a {
     font-size: 22px;
     margin: 0 30px;
+}
+
+/* styles for the footer */
+footer {
+    background-color: var(--dark-grey);
+    color: var(--greyish-white);
+    width: 100%;
+    padding: 30px;
+    text-align: center;
+}
+
+footer h2 {
+    font-weight: lighter;
+    font-size: 30px;
+    margin-bottom: 5px;
+}
+
+footer div {
+    line-height: 1.5;
 }
