--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,9 +33,9 @@
     box-sizing: border-box;
 }
 
+/* general styles and utility classes */
 body {
     /*font-size: 22px;*/
-    /*font-family: Helvetica, Arial, sans-serif;*/
     font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
     background-color: var(--greyish-white);
     color: var(--dark-grey);
@@ -43,6 +43,15 @@ body {
 
 section {
     padding: 60px;
+}
+
+.section-title {
+    font-size: 55px;
+    font-weight: lighter;
+    text-align: right;
+    padding: 0 50px;
+    border-right: 3px solid;
+    border-color: var(--dark-grey);
 }
 
 /* styles for the header */
@@ -143,3 +152,5 @@ footer div {
 #viz {
     color: var(--green2);
 }
+
+/* styles for the "About Me" section */
