--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 :root {
-    --greyish-white: #e2e2e2;
-    --dark-grey: #2d2d2d;
+    --primary-white: #e2e2e2;
+    --primary-black: #2d2d2d;
     --yellow-rb: #fce138;
     --orange1: #ffc515;
     --orange2: #f58449;
@@ -37,8 +37,8 @@
 body {
     /*font-size: 22px;*/
     font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
-    background-color: var(--greyish-white);
-    color: var(--dark-grey);
+    background-color: var(--primary-white);
+    color: var(--primary-black);
 }
 
 section {
@@ -51,36 +51,37 @@ section {
     text-align: right;
     padding: 0 50px;
     border-right: 3px solid;
-    border-color: var(--dark-grey);
+    border-color: var(--primary-black);
 }
 
 /* styles for the header */
 header {
-    background-color: var(--dark-grey);
+    background-color: var(--primary-black);
     padding: 20px 0;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 header h1 {
     font-size: 36px;
-    background-color: var(--greyish-white);
+    background-color: var(--primary-white);
     margin: 0;
     text-align: right;
     padding-left: 60px;
     padding-right: 10px;
-    display: inline;
 }
 
 header a {
     text-decoration: none;
-    color: var(--greyish-white);
+    color: var(--primary-white);
 }
 
 header h1 a {
-    color: var(--dark-grey);
+    color: var(--primary-black);
 }
 
 header nav {
-    float: right;
     margin: 7px 0;
 }
 
@@ -95,8 +96,8 @@ header nav ul li a {
 
 /* styles for the footer */
 footer {
-    background-color: var(--dark-grey);
-    color: var(--greyish-white);
+    background-color: var(--primary-black);
+    color: var(--primary-white);
     width: 100%;
     padding: 30px;
     text-align: center;
