--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,35 +127,52 @@ footer div {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    align-items: center;
 }
 
 .greeting {
-    flex: 1 12%;
-    margin-right: 20px;
+    background: var(--primary-black);
 }
 
-.greeting img {
-    max-width: 100%;
+.greeting-img {
+    background-image: url(../images/pic_sandrine_sml.jpg);
+    background-size: cover;
+    min-height: 400px;
+    min-width: 300px;
+    display: flex;
+    align-items: flex-end;
+    padding: 15px;
+    position: relative;
+    overflow: hidden;
 }
 
-.greeting-text {
-    font-weight: lighter;
+.greeting-img::before {
+    content: "";
+    height: 100%;
+    width: 100%;
+    background: linear-gradient(rgba(255, 255, 255, 0), var(--primary-black));
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
-.greeting h1 {
-    font-size: 3vw;
-    font style: italic;
+.greeting-img h1 {
+    font-size: 4vw;
+    font-weight: normal;
+    color: var(--red3);
+    z-index: 1000;
+    position: relative;
+    top: 200px;
+    transition: 0.6s;
 }
 
-.greeting h3 {
-    font-size: 1.5vw;
+.greeting:hover .greeting-img h1 {
+    transform: translate(0, -200px);
 }
 
 #hi {
     color: var(--red3);
 }
-
+/*
 #hola {
     color: var(--yellow-rb);
 }
@@ -163,13 +180,37 @@ footer div {
 #bonjour {
     color: var(--blue3);
 }
-
-.hero-title {
-    flex: 12;
+*/
+.flags ul {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    list-style: none;
 }
 
-.hero-title-line {
-    width: 50%;
+.flags ul li a {
+    text-decoration: none;
+    font-size: 50px;
+}
+
+.hero-title {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: space-around;
+}
+
+.hero-title-2 {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: space-between;
+}
+
+.hero-title h3 {
+    width: 500px;
+    text-align: right;
+    font-size: xx-large;
 }
 
 #webdev {
