--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,6 +61,10 @@ header {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    position: sticky;
+    position: -webkit-sticky;
+    top: 0;
+    z-index: 9999;
 }
 
 header h1 {
@@ -70,6 +74,7 @@ header h1 {
     text-align: right;
     padding-left: 60px;
     padding-right: 10px;
+    box-shadow: 1px 1px 2px var(--primary-white);
 }
 
 header a {
@@ -137,7 +142,7 @@ footer div {
     background-image: url(../images/pic_sandrine_sml.jpg);
     background-size: cover;
     min-height: 400px;
-    min-width: 300px;
+    min-width: 320px;
     display: flex;
     align-items: flex-end;
     padding: 15px;
@@ -145,7 +150,7 @@ footer div {
     overflow: hidden;
 }
 
-.greeting-img::before {
+.greeting-img::after {
     content: "";
     height: 100%;
     width: 100%;
@@ -153,6 +158,8 @@ footer div {
     position: absolute;
     top: 0;
     left: 0;
+    opacity: 0;
+    transition: 0.5s;
 }
 
 .greeting-img h1 {
@@ -165,14 +172,19 @@ footer div {
     transition: 0.6s;
 }
 
+.greeting:hover .greeting-img::after{
+    opacity: 1;
+}
+
 .greeting:hover .greeting-img h1 {
     transform: translate(0, -200px);
 }
 
+/*
 #hi {
     color: var(--red3);
 }
-/*
+
 #hola {
     color: var(--yellow-rb);
 }
@@ -210,23 +222,34 @@ footer div {
 .hero-title h3 {
     width: 500px;
     text-align: right;
-    font-size: xx-large;
+    font-size: 4vw;
+    font-weight: normal;
+    text-shadow: 1px 1px 2px var(--primary-white);
+    padding-right: 10px;
 }
 
 #webdev {
-    background-color: var(--orange1);
+    color: var(--yellow-rb);
+    transition: 1s;
+    background-color: var(--primary-black);
 }
 
 #datanal {
-    background-color: var(--blue1);
+    color: var(--blue1);
+    transition: 2s;
+    background-color: var(--primary-black);
 }
 
 #and {
-    background-color: var(--blue2);
+    margin: 10px;
+    color: var(--blue2);
+    transition: 3s;
 }
 
 #viz {
-    background-color: var(--green2);
+    color: var(--green2);
+    transition: 3.5s;
+    background-color: var(--primary-black);
 }
 
 /* styles for the "About Me" section */
