--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,8 +72,8 @@ header h1 {
     background-color: var(--primary-white);
     margin: 0;
     text-align: right;
-    padding-left: 60px;
-    padding-right: 10px;
+    padding-left: 100px;
+    padding-right: 50px;
     box-shadow: 1px 1px 2px var(--primary-white);
 }
 
@@ -136,6 +136,7 @@ footer div {
 
 .greeting {
     background: var(--primary-black);
+    box-shadow: 1px 1px 20px black;
 }
 
 .greeting-img {
@@ -224,32 +225,35 @@ footer div {
     text-align: right;
     font-size: 4vw;
     font-weight: normal;
-    text-shadow: 1px 1px 2px var(--primary-white);
     padding-right: 10px;
+    background-color: rgba(45, 45, 45, 0.8);
+    text-shadow: 1px 1px 2px black;
+    box-shadow: 1px 5px 10px black;
 }
 
 #webdev {
-    color: var(--yellow-rb);
+    color: var(--orange1);
     transition: 1s;
-    background-color: var(--primary-black);
 }
 
 #datanal {
     color: var(--blue1);
     transition: 2s;
-    background-color: var(--primary-black);
 }
 
 #and {
-    margin: 10px;
-    color: var(--blue2);
+    margin: 10px 30px;
+    color: white;
     transition: 3s;
+    text-shadow: 2px 5px 10px black;
+    box-shadow: none;
+    background-color: transparent;
 }
 
 #viz {
     color: var(--green2);
     transition: 3.5s;
-    background-color: var(--primary-black);
+    background-color: rgba(45, 45, 45, 0.8);
 }
 
 /* styles for the "About Me" section */
