--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,14 +94,14 @@ header nav {
 
 header nav ul {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     flex-wrap: wrap;
     align-items: center;
     list-style: none;
 }
 
 header nav ul li a {
-    font-size: 1.55vw;
+    font-size: 1.6vw;
     font-weight: lighter;
     margin: 0 30px;
     padding: 10px 15px;
@@ -148,12 +148,11 @@ footer div {
 .greeting {
     background: var(--primary-black);
     border: 1px solid var(--primary-white);
-    /*border-radius: 50px;*/
     box-shadow: 1px 1px 20px black;
 }
 
 .greeting-img {
-    background-image: url(../images/pic_sandrine_sml.jpg);
+    background-image: url(../images/pic_sandrine.jpg);
     background-size: cover;
     min-height: 400px;
     min-width: 320px;
@@ -276,5 +275,58 @@ footer div {
 
 /* MEDIA QUERY FOR TABLETS AND SMALLER */
 @media screen and (max-width: 768px) {
-    
+    header h1 {
+        width: 30%;
+        padding-left: 50px;
+    }
+
+    header nav ul li a {
+        font-size: 15px;
+        padding: 5px;
+    }
+
+    .greeting-img {
+        background-image: url(../images/pic_sandrine_200wide.jpg);
+        min-height: 250px;
+        min-width: 200px;
+    }
+
+    .greeting-img::after {
+        content: none;
+    }
+
+    .hero-title h3 {
+        width: 300px;
+    }
+}
+
+/* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
+@media screen and (max-width: 575px) {
+    header {
+        flex-direction: column;
+        align-items: right;
+        justify-content: flex-end;
+        padding: 0;
+    }
+    header h1 {
+        width: 100%;
+        padding: 5px;
+        text-align: center;
+        border-top-right-radius: 0px;
+        font-size: x-large;
+        font-weight: bold;
+    }
+    header nav {
+        width: 100%;
+    }
+    header nav ul li a {
+        font-weight: normal;
+        margin: 0 auto;
+        padding: 0 auto;
+        border-bottom: none;
+    }
+    header nav ul li a:hover {
+        color: var(--orange3);
+        text-shadow: none;
+    }
 }
