--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -146,7 +146,7 @@ footer div {
 }
 
 .greeting {
-    background: var(--primary-black);
+    /*background: var(--primary-black);*/
     border: 1px solid var(--primary-white);
     box-shadow: 1px 1px 20px black;
 }
@@ -154,6 +154,7 @@ footer div {
 .greeting-img {
     background-image: url(../images/pic_sandrine.jpg);
     background-size: cover;
+    background-position: center;
     min-height: 400px;
     min-width: 320px;
     display: flex;
@@ -276,12 +277,13 @@ footer div {
 /* MEDIA QUERY FOR TABLETS AND SMALLER */
 @media screen and (max-width: 768px) {
     header h1 {
-        width: 30%;
+        width: 35%;
         padding-left: 50px;
     }
 
     header nav ul li a {
         font-size: 15px;
+        margin: 0 20px;
         padding: 5px;
     }
 
@@ -328,5 +330,28 @@ footer div {
     header nav ul li a:hover {
         color: var(--orange3);
         text-shadow: none;
+    }
+    .hero {
+        justify-content: center;
+    }
+    .hero-title {
+        display: block;
+    }
+    .hero-title h3 {
+        margin: 20px 0 0 0;
+        padding: 5px 5px;
+        font-size: 6vw;
+        text-align: center;
+        width: 100%;
+    }
+    .hero-title-2 {
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+    #and {
+        margin-right: 5px;
+    }
+    #webdev, #datanal, #and, #viz {
+        transition: none;
     }
 }
