--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -272,7 +272,7 @@ main section {
     border-left: 3px solid;
     border-color: var(--primary-black);
     padding: 0 30px;
-    flex: 5;
+    flex: 10;
     font-size: 22px;
 }
 
@@ -361,10 +361,37 @@ main section {
     background-image: url(../images/portfolio/screen-shot-run-buddy.png);
 }
 
-/* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
+/* styles for the "Contact" section */
+.contact-info {
+
+}
+
+/* MEDIA QUERY FOR SCREENS 1400px WIDE OR LESS */
+@media screen and (max-width: 1400px) {
+    .portfolio-grid-container {
+        grid-template-columns: repeat(4, 1fr);
+    }
+}
+/* MEDIA QUERY FOR SMALL DESKTOP SCREENS AND SMALLER */
 @media screen and (max-width: 980px) {
     .greeting {
         flex: -1 20%;
+    }
+    .portfolio-grid-container {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(8, 1fr);
+    }
+    .portfolio-grid-item.whr {
+        grid-column: 1/ span 2;
+        grid-row: 1/ span 2;
+    }
+    .portfolio-grid-item.dintel {
+        grid-column: 1/ span 2;
+        grid-row: 3/ span 2;
+    }
+    .portfolio-grid-item.belly-button {
+        grid-column: 1/ span 2;
+        grid-row: 5/ span 2;
     }
 }
 
@@ -393,6 +420,22 @@ main section {
 
     .hero-title h3 {
         width: 300px;
+    }
+    .portfolio-grid-container {
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(7, 1fr);
+    }
+    .portfolio-grid-item.whr {
+        grid-column: 1/ span 1;
+        grid-row: 1/ span 1;
+    }
+    .portfolio-grid-item.dintel {
+        grid-column: 1/ span 1;
+        grid-row: 2/ span 1;
+    }
+    .portfolio-grid-item.belly-button {
+        grid-column: 1/ span 1;
+        grid-row: 3/ span 1;
     }
 }
 
