--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -175,32 +175,6 @@ footer div {
     transform: translate(0, -200px);
 }
 
-/* WORK IN PROGRESS
-#hi {
-    color: var(--red3);
-}
-
-#hola {
-    color: var(--yellow-rb);
-}
-
-#bonjour {
-    color: var(--blue3);
-}
-
-.flags ul {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    list-style: none;
-}
-
-.flags ul li a {
-    text-decoration: none;
-    font-size: 50px;
-}
-*/
-
 .hero-title {
     display: flex;
     flex-direction: column;
@@ -216,7 +190,7 @@ footer div {
 }
 
 .hero-title h3 {
-    width: 500px;
+    width: 550px;
     text-align: right;
     font-size: 4vw;
     font-weight: normal;
@@ -260,12 +234,16 @@ main section {
 }
 
 .section-title {
-    font-size: 40px;
+    margin: 20px;
+    width: 15%;
+}
+
+.section-title h2 {
+    width: 100%;
+    font-size: 4vw;
     line-height:1;
     font-weight: lighter;
     text-align: right;
-    margin: 20px;
-    flex: 1 5%;
 }
 
 .section-content {
@@ -273,7 +251,7 @@ main section {
     border-color: var(--primary-black);
     padding: 0 30px;
     flex: 10;
-    font-size: 22px;
+    font-size: 2vw;
 }
 
 /* styles for the "Portfolio" section */
@@ -366,6 +344,13 @@ main section {
 
 }
 
+/* MEDIA QUERY FOR SCREENS 1700px WIDE OR MORE */
+@media screen and (min-width: 1700px) {
+    .hero-title h3 {
+        width: 700px;
+        font-size: 3vw;
+    }
+}
 /* MEDIA QUERY FOR SCREENS 1400px WIDE OR LESS */
 @media screen and (max-width: 1400px) {
     .portfolio-grid-container {
@@ -373,9 +358,24 @@ main section {
     }
 }
 /* MEDIA QUERY FOR SMALL DESKTOP SCREENS AND SMALLER */
-@media screen and (max-width: 980px) {
+@media screen and (max-width: 990px) {
+    header h1 {
+        width: 35%;
+        padding-right: 0;
+    }
+    header nav ul li a {
+        padding: 10px 10px;
+    }
     .greeting {
         flex: -1 20%;
+    }
+    .greeting-img {
+        background-image: url(../images/pic_sandrine_200wide.jpg);
+        min-height: 250px;
+        min-width: 200px;
+    }
+    .hero-title h3 {
+        width: 400px;
     }
     .portfolio-grid-container {
         grid-template-columns: repeat(2, 1fr);
@@ -398,28 +398,18 @@ main section {
 /* MEDIA QUERY FOR TABLETS AND SMALLER */
 @media screen and (max-width: 768px) {
     header h1 {
-        width: 35%;
-        padding-left: 50px;
+        width: 30%;
     }
-
     header nav ul li a {
         font-size: 15px;
         margin: 0 20px;
         padding: 5px;
     }
-
-    .greeting-img {
-        background-image: url(../images/pic_sandrine_200wide.jpg);
-        min-height: 250px;
-        min-width: 200px;
-    }
-
     .greeting-img::after {
         content: none;
     }
-
     .hero-title h3 {
-        width: 300px;
+        width: 250px;
     }
     .portfolio-grid-container {
         grid-template-columns: 1fr;
