cleaned up details

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,6 @@
 
 /* general styles and utility classes */
 body {
-    /*font-size: 22px;*/
     font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
     background-color: var(--primary-white);
     color: var(--primary-black);
@@ -116,7 +115,6 @@ footer div {
 }
 
 .greeting {
-    /*background: var(--primary-black);*/
     border: 1px solid var(--primary-white);
     box-shadow: 1px 1px 20px black;
 }
@@ -353,6 +351,13 @@ main section {
 
 .linkedin img {
     max-width: 200px;
+}
+
+/* styles for the "Resume" section */
+
+#resume a {
+    text-decoration: none;
+    color: var(--blue2);
 }
 
 /* MEDIA QUERY FOR SCREENS 1700px WIDE OR MORE */
